unicard_types_macro/tests/ui/struct_tuple_test.stderr
error[E0277]: the trait bound `File: unicard_types::WasmType32` is not satisfied
 --> tests/ui/struct_tuple_test.rs:5:29
  |
5 | struct ContainsInvalidTypes(std::fs::File);
  |                             ^^^^^^^^^^^^^ the trait `unicard_types::WasmType32` is not implemented for `File`
  |
  = help: the following other types implement trait `unicard_types::WasmType32`:
            i8
            i16
            i32
            i64
            u8
            u16
            u32
            u64
          and $N others
