unicard_types_macro/tests/ui/struct_tuple_test.rs
pub use unicard_types::*;
use unicard_types_macro::WasmType32 as WasmType;

#[derive(WasmType)]
struct ContainsInvalidTypes(std::fs::File);

fn main() {}